--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@remix-run/react": "^2.16.8",
     "@remix-run/serve": "^2.16.8",
     "@supabase/supabase-js": "^2.50.3",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
     "isbot": "^4.1.0",
     "match-sorter": "^6.3.1",
+    "postgres": "^3.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sort-by": "^1.2.0",
