--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
+
+DATABASE_URL=your_postgres_database_url_and_password
+
+
+# AUTO_MIGRATE= Set to `true` to enable auto-migration in production (optional)
+# -NODE_ENV= When set to `development`, auto-migration is enabled by default
