--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
     "isbot": "^4.1.0",
+    "lightningcss": "^1.30.1",
     "match-sorter": "^6.3.1",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
@@ -35,12 +36,15 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.47.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
