--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
+NEXT_PUBLIC_SUPABASE_URL=your_public_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_public_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=
+DATABASE_URL=your_postgres_url_port:6543
+DATABASE_DIRECT_URL=your_postgres_url_port:5432
 
-DATABASE_URL=your_postgres_database_url_and_password
+S3_Endpoint=your_s3_endpoint
+S3_Region=your_s3_region
+S3_Access_Key_ID=your_s3_access_key_id
+S3_Secret_Access_Key=2your_s3_secret_access_key
 
 
-# AUTO_MIGRATE= Set to `true` to enable auto-migration in production (optional)
-# -NODE_ENV= When set to `development`, auto-migration is enabled by default
+AUTO_MIGRATE=true #Set to `true` to enable auto-migration in production (optional)
+NODE_ENV=development #When set to `development`, auto-migration is enabled by default
+DEV_ADMIN_PASSWORD=password #this created admin user is only for development mode, not for production.
