--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,6 +19,10 @@ jobs:
       contents: read
 
     steps:
+      - name: Get lowercase repository name
+        id: repo
+        run: echo "repo_owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -76,9 +80,9 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.major }}
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.major }}.${{ steps.version.outputs.minor }}
+            ghcr.io/${{ steps.repo.outputs.repo_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            ghcr.io/${{ steps.repo.outputs.repo_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.major }}
+            ghcr.io/${{ steps.repo.outputs.repo_owner }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.major }}.${{ steps.version.outputs.minor }}
             ${{ github.ref == 'refs/heads/main' && format('ghcr.io/{0}/${{ env.IMAGE_NAME }}:latest', github.repository_owner) || '' }}
 
       - name: Generate summary
