--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,10 +42,14 @@ jobs:
           VERSION=${{ steps.version.outputs.version }}
           IMAGE=ghcr.io/${{ steps.repo.outputs.repo_owner }}/${{ env.IMAGE_NAME }}
           GHCR_URL="https://ghcr.io/v2/${{ steps.repo.outputs.repo_owner }}/${{ env.IMAGE_NAME }}/manifests/$VERSION"
-          echo "GHCR_URL=$GHCR_URL"
-          echo "$GHCR_TOKEN"
+
           echo "Checking if GHCR tag $VERSION exists for $IMAGE..."
-          STATUS=$(curl -H "Authorization: Bearer $GHCR_TOKEN" "$GHCR_URL")
+
+          STATUS=$(curl \
+            -H "Authorization: Bearer \
+            -H "Accept: application/vnd.oci.image.index.v1+json, application/vnd.oci.image.manifest.v1+json, application/vnd.docker.distribution.manifest.v2+json" \
+            $GHCR_TOKEN" "$GHCR_URL")
+
           echo "HTTP status code: $STATUS"
           if [ "$STATUS" -eq 200 ]; then
             echo "::error::GHCR tag $VERSION already exists. Please bump the version in package.json."
