--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "drizzle-orm": "^0.44.2",
     "isbot": "^4.1.0",
     "lightningcss": "^1.30.1",
+    "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
