chore: update envs

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ S3_Secret_Access_Key=your_s3_secret_access_key
 S3_Bucket=your_s3_bucket_name
 
 NODE_ENV=development #leave this as development for local testing, remove for prod environment
+
+CONVERSION_API_URL=your_api_url
+CONVERSION_API_TIMEOUT=60000  # Timeout in ms (default if not set)
+CONVERSION_POLLING_INTERVAL=1000  # In ms (default is 2 seconds)
