--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "",
-  "version": "0.1.5",
+  "version": "0.2.1",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -15,11 +15,15 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "sync:users": "tsx scripts/sync-auth-users.ts",
+    "init:feature-flags": "tsx scripts/init-feature-flags.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.856.0",
     "@aws-sdk/s3-request-presigner": "^3.856.0",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
     "@remix-run/serve": "^2.16.8",
@@ -29,11 +33,14 @@
     "drizzle-orm": "^0.44.2",
     "isbot": "^4.1.0",
     "lightningcss": "^1.30.1",
+    "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sort-by": "^1.2.0",
+    "three": "^0.179.1",
+    "three-stdlib": "^2.36.0",
     "tiny-invariant": "^1.3.1",
     "tslib": "^2.8.1"
   },
@@ -42,6 +49,7 @@
     "@remix-run/dev": "^2.16.8",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.179.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "autoprefixer": "^10.4.21",
