feat: Implement auth session expiry

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SUPABASE_URL=your_public_supabase_url
 SUPABASE_ANON_KEY=your_public_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+SESSION_EXPIRY=3600  # Optional: Session expiry in seconds, Default is No Expiry
 DATABASE_URL=your_postgres_url_port:6543
 DATABASE_DIRECT_URL=your_postgres_url_port:5432
 
