--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
     "postgres": "^3.4.7",
+    "puppeteer": "^24.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sort-by": "^1.2.0",
