chore: prepare for migration-based CI/CD pipeline
  - Remove drizzle/ and scripts/ from .dockerignore for production builds
  - Change platform target from amd64+arm64 to amd64 only
  - Switch prestart script from db:push to db:migrate
  - Add drizzle migrations folder copy to Dockerfile

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "predev": "drizzle-kit push",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build/server/index.js",
-    "prestart": "drizzle-kit push",
+    "prestart": "drizzle-kit migrate",
     "typecheck": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
