--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -94,7 +94,10 @@ jobs:
           # Matches patterns like: image: ghcr.io/subtractmanufacturing/subtract-admin-dashboard:v1.0.0
           sed -i "s|image: ${IMAGE}:.*|image: ${IMAGE}:${VERSION}|g" "$COMPOSE_FILE"
 
-          echo "Updated $COMPOSE_FILE with image tag: $VERSION"
+          # Update the RELEASE_VERSION environment variable
+          sed -i "s|RELEASE_VERSION=.*|RELEASE_VERSION=${VERSION}|g" "$COMPOSE_FILE"
+
+          echo "Updated $COMPOSE_FILE with image tag and RELEASE_VERSION: $VERSION"
           cat "$COMPOSE_FILE"
 
       - name: Commit and push changes
@@ -121,5 +124,6 @@ jobs:
           echo "Updated \`ansible-common/roles/webapp/files/docker-compose.yml\` with:" >> $GITHUB_STEP_SUMMARY
           echo "- **Version:** ${{ needs.promote-image.outputs.version_tag }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Image:** ${{ env.REGISTRY }}/${{ needs.promote-image.outputs.image_name }}:${{ needs.promote-image.outputs.version_tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **RELEASE_VERSION:** ${{ needs.promote-image.outputs.version_tag }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "DOCO-CD will pick up the changes automatically." >> $GITHUB_STEP_SUMMARY
