--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "archiver": "^7.0.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
+    "googleapis": "^168.0.0",
     "isbot": "^4.1.0",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
