docs: update env example

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ NODE_ENV=development #leave this as development for local testing, remove for pr
 CONVERSION_API_URL=your_api_url
 CONVERSION_API_TIMEOUT=60000  # Timeout in ms (default if not set)
 CONVERSION_POLLING_INTERVAL=1000  # In ms (default is 2 seconds)
+
+GOOGLE_SERVICE_ACCOUNT_EMAIL=From_key.json
+GOOGLE_DELEGATED_USER_EMAIL=account_you_setup_in_workspaces
+GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=PK_from_key.json
