ci: fix YAML syntax error in staging-deploy workflow

--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -20,7 +20,7 @@ jobs:
     name: Build & Push Image
     runs-on: ubuntu-latest
     # Skip if this is a release-please PR merge
-    if: ${{ !startsWith(github.event.head_commit.message, 'chore(master): release') && !startsWith(github.event.head_commit.message, 'chore(main): release') }}
+    if: "${{ !startsWith(github.event.head_commit.message, 'chore(master): release') && !startsWith(github.event.head_commit.message, 'chore(main): release') }}"
     permissions:
       contents: read
       packages: write
