--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
+    "mupdf": "^1.26.4",
     "postgres": "^3.4.7",
     "puppeteer": "^24.23.0",
     "react": "^18.2.0",
