--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.856.0",
+    "@aws-sdk/lib-storage": "^3.978.0",
     "@aws-sdk/s3-request-presigner": "^3.856.0",
     "@react-email/components": "^1.0.1",
     "@react-email/render": "^2.0.0",
@@ -35,13 +36,13 @@
     "archiver": "^7.0.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
-    "googleapis": "^168.0.0",
     "isbot": "^4.1.0",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
     "mupdf": "^1.26.4",
     "postgres": "^3.4.7",
+    "postmark": "^4.0.5",
     "puppeteer": "^24.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
