--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.539.0",
     "match-sorter": "^6.3.1",
     "mupdf": "^1.26.4",
+    "node-cron": "^4.2.1",
     "postgres": "^3.4.7",
     "postmark": "^4.0.5",
     "puppeteer": "^24.23.0",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@babel/traverse": "^7.28.0",
     "@remix-run/dev": "^2.16.8",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.179.0",
