--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@react-email/render": "^2.0.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
-    "@remix-run/node": "^2.16.8",
-    "@remix-run/react": "^2.16.8",
-    "@remix-run/serve": "^2.16.8",
+    "@remix-run/node": "^2.17.3",
+    "@remix-run/react": "^2.17.3",
+    "@remix-run/serve": "^2.17.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
     "@types/archiver": "^6.0.3",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@babel/traverse": "^7.28.0",
-    "@remix-run/dev": "^2.16.8",
+    "@remix-run/dev": "^2.17.3",
     "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -78,7 +78,9 @@
   },
   "overrides": {
     "rollup": "npm:@rollup/wasm-node",
-    "glob": "^10.5.0"
+    "glob": "^10.5.0",
+    "@remix-run/router": "^1.23.2",
+    "qs": "^6.14.1"
   },
   "engines": {
     "node": ">=20.0.0"
