--- a/package.json
+++ b/package.json
@@ -76,15 +76,13 @@
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
-  "overrides": {
+"overrides": {
     "rollup": "npm:@rollup/wasm-node",
     "glob": "^10.5.0",
     "@remix-run/router": "^1.23.2",
     "qs": "^6.14.1",
     "fast-xml-parser": "^5.3.6",
-    "axios": "^1.13.5"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "axios": "^1.13.5",
+    "minimatch": "^10.0.0"
   }
 }
