--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "qs": "^6.14.1",
     "fast-xml-parser": "^5.3.6",
     "axios": "^1.13.5",
-    "minimatch": "^10.0.0"
+    "minimatch": "^10.0.0",
+    "tar": ">=7.6.0",
+    "cacache": ">=19.0.0"
   }
 }
